<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/toolbar_profile"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_applications"
        android:orderInCategory="2"
        android:title="@string/toolbar_applications"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_addjob"
        android:orderInCategory="3"
        android:title="@string/toolbar_addjob"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:title="@string/toolbar_logout"
        app:showAsAction="never"
        />
</menu>