<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".CreateAccountActivity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:scaleType="centerCrop"
            android:src="@drawable/background_v11" />
    </RelativeLayout>

    <TextView
        android:id="@+id/createaccount_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/create_account_title"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryB"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createaccount_text_name"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/create_account_name"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_radiogroup_roles" />

    <EditText
        android:id="@+id/createaccount_text_email"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/create_account_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text_name" />

    <EditText
        android:id="@+id/createaccount_text_phone"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/create_account_phone"
        android:inputType="phone"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text_email" />

    <EditText
        android:id="@+id/createaccount_text_password"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/create_account_password"
        android:inputType="textPassword"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text_phone" />

    <EditText
        android:id="@+id/createaccount_text_confirmpassword"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/create_account_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHighlight="@color/design_default_color_on_primary"
        android:textColorHint="@color/colorHint"
        android:textColorLink="@color/design_default_color_on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text_password" />

    <Button
        android:id="@+id/createaccount_button_submit"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn2_rounded"
        android:onClick="createAccount"
        android:text="@string/create_account_submit"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text_confirmpassword" />

    <RadioGroup
        android:id="@+id/createaccount_radiogroup_roles"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount_text_title">

        <RadioButton
            android:id="@+id/createaccount_radio_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/create_account_radio_employee"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/design_default_color_on_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/createaccount_radio_employer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account_radio_employer"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>